syntax = "proto3";

package proto.product.v1;

option go_package="example/pb/proto/product/v1;product";

import "proto/category/v1/category.proto";

message Product {
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 category_id = 4;
	int32 price = 5;
}

message CreateProductRequest {
	string name = 1;
	string description = 2;
	int32 category_id = 3;
	int32 price = 4;
}

message CreateProductResponse {
	Product product = 1;
}

message GetProductRequest {
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 price = 4;
	proto.category.v1.Category category = 5;
}

message GetProductResponse {
	Product product = 1;
}

message ListProductRequest {}

message ListProductResponse {
	repeated Product product = 1;
}

message UpdateProductRequest {
	int32 id = 1;
    string name = 2;
	string description = 3;
	int32 category_id = 4;
	int32 price = 5;
}

message UpdateProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    int32 id = 1;
}

message DeleteProductResponse {
    bool success = 1;
}

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc ListProduct(ListProductRequest) returns (ListProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}